# ggsql-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  great-docs-pyo3-issues.md  great-docs.yml  pyproject.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/: python.yml  release-python.yml
.github/workflows/: docs.yml  python.yml  release-python.yml
python/ggsql/: __init__.py  _ggsql.pyi
src/: lib.rs
tests/: test_ggsql.py
