[package]
name = "ggsql-python"
version = "0.2.7"
edition = "2021"
authors = ["ggsql Team"]
license = "MIT"
repository = "https://github.com/posit-dev/ggsql-python"
homepage = "https://ggsql.org"
description = "Python bindings for ggsql"

[lib]
name = "_ggsql"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py310"] }
polars = { version = "0.52", default-features = false, features = ["ipc"] }
ggsql = { version = "0.2.7", default-features = false, features = ["duckdb", "vegalite"] }

[features]
default = []
