[package]
name = "ggsql-python"
version = "0.3.1"
edition = "2021"
authors = ["ggsql Team"]
license = "MIT"
repository = "https://github.com/posit-dev/ggsql-python"
homepage = "https://ggsql.org"
description = "Python bindings for ggsql"

[lib]
name = "_ggsql"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.26", features = ["extension-module", "abi3-py310"] }
arrow = { version = "56", default-features = false, features = ["ipc"] }
ggsql = { version = "0.3.1", default-features = false, features = ["duckdb", "vegalite"] }

[features]
default = []
